[profile.release]
panic = 'unwind'

[workspace]
exclude = [
    "utils/webpki",
    "utils/ring",
    "utils/serde_json_no_std",
    "utils/serde_derive_no_std",
    "utils/serde_derive_no_std"
]

members = [
    'cstrml/balances',
    'cstrml/candy',
    'cstrml/claims',
    'cstrml/staking',
    'cstrml/tars',
    'cstrml/market',
    'cstrml/tars/benchmarking',
    'runtime',
    'rpc',
    'node',
]