[profile.release]
panic = 'unwind'

[workspace]
exclude = [
    "utils/webpki",
    "utils/ring",
    "utils/serde_json_no_std",
    "utils/serde_derive_no_std",
    "utils/serde_derive_no_std"
]

members = [
    'pallets/balances',
    'pallets/candy',
    'pallets/claims',
    'pallets/staking',
    'pallets/tars',
    'pallets/murphy',
    'pallets/tars/benchmarking',
    'runtime',
    'rpc',
    'node',
]