[package]
name = "cstrml-market"
version = "0.11.1"
authors = ["calcuio"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://calcu.network"
repository = "https://github.com/calcuio/calcu/"

[dependencies]
# third party dependencies
codec = { default-features = false, package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }
serde = { optional = true, version = "1.0.116" }
serde_json = "1.0.51"

# substrate frames
frame-system = { default-features = false, version = "3.0.0" }
frame-support = { default-features = false, version = "3.0.0" }

# substrate primitives
sp-core = { default-features = false, version = "3.0.0" }
sp-io = { default-features = false, version = "3.0.0" }
sp-runtime = { default-features = false, version = "3.0.0" }
sp-std = { default-features = false, version = "3.0.0" }

frame-benchmarking = { default-features = false, optional = true, version = "3.0.0" }

# calcu runtime modules
primitives = { package = "cst-primitives", path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-system/std",
    "primitives/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
]

[dev-dependencies]
hex = "0.4.2"
tars = { package = "cstrml-tars", path = "../tars" }
balances = { package = "cstrml-balances", path = "../balances" }
frame-benchmarking = "3.0.0"
