[package]
name = "nft-config"
version = "3.0.0"
authors = ["calcuio"]
edition = "2018"
homepage = "https://calcu.io"
repository = "https://github.com/calcuio/calcu/"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false}
sp-runtime = { version = "3.0.0", default-features = false}
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
pallet-proxy = { version = "3.0.0", default-features = false }
pallet-timestamp = { version = "3.0.0", default-features = false }

[dev-dependencies]
sp-io = { version = "3.0.0" }
pallet-balances = { version = "3.0.0" }
pallet-utility = { version = "3.0.0" }
orml-currencies = { version = "0.4.0"}
orml-tokens =  { version = "0.4.0"}
orml-traits =  { version = "0.4.0"}
orml-nft = { version = "0.4.0"}

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-proxy/std",
	"pallet-timestamp/std",
]
