[package]
name = "nft-cooper"
version = "3.0.0"
authors = ["NFTMart Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
enumflags2 = { version = "0.6.3" }
sp-core = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false}
pallet-proxy = { version = "3.0.0", default-features = false }
pallet-timestamp = { version = "3.0.0", default-features = false }
orml-traits = { version = "0.4.0", default-features = false }
orml-nft = { version = "0.4.0"}
nft-config = { default-features = false, path = "../nft-config" }

[dev-dependencies]
sp-io = { version = "3.0.0" }
pallet-balances = { version = "3.0.0" }
pallet-utility = { version = "3.0.0" }
orml-currencies = { version = "0.4.0"}
orml-tokens =  { version = "0.4.0"}

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-proxy/std",
	"orml-traits/std",
	"orml-nft/std",
	"nft-config/std",
	"pallet-timestamp/std",
	"enumflags2/serde"
]
