[package]
name = "pallets-tars-benchmarking"
version = "0.21.4"
authors = ["calcuio"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://calcu.io"
repository = "https://github.com/calcuio/calcu/"

[dependencies]
# third party dependencies
codec = { default-features = false, package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }
serde = { optional = true, version = "1.0.116" }

# substrate frame dependencies
frame-support = { default-features = false, version = "3.0.0" }
frame-system = { default-features = false, version = "3.0.0" }

# substrate primitives
sp-core = { default-features = false, version = "3.0.0" }
sp-io = { default-features = false, version = "3.0.0" }
sp-runtime = { default-features = false, version = "3.0.0" }
sp-std = { default-features = false, version = "3.0.0" }

frame-benchmarking = { version = "3.0.0", default-features = false }

# calcu runtime modules
primitives = { package = "cst-primitives", path = "../../../primitives", default-features = false }
murphy = { package = "pallets-murphy", path = "../../murphy", default-features = false }
tars = { package = "pallets-tars", path = "../../tars", default-features = false }
balances = { package = "pallets-balances", path = "../../balances", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-system/std",
    "primitives/std",
    "frame-benchmarking/std",
    "tars/std",
    "murphy/std",
    "balances/std"
]

[dev-dependencies]
hex = "0.4.2"
keyring = { package = "sp-keyring", version = "3.0.0" }
